<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CentroGaleria">

  <Button
      android:id="@+id/btnperso"
      android:layout_width="143dp"
      android:layout_height="68dp"
      android:backgroundTint="#FFE501"
      android:text="@string/personagem"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.155"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.081" />

  <Button
      android:id="@+id/btncenario"
      android:layout_width="144dp"
      android:layout_height="67dp"
      android:backgroundTint="#FFE501"
      android:text="@string/cenario"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.155"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.262" />

  <Button
      android:id="@+id/btnmusicas"
      android:layout_width="144dp"
      android:layout_height="67dp"
      android:backgroundTint="#FFE501"
      android:text="@string/musicas"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.152"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.432" />

  <Button
      android:id="@+id/btncreditos"
      android:layout_width="144dp"
      android:layout_height="67dp"
      android:backgroundTint="#FFE501"
      android:text="@string/creditos"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.152"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.608" />

  <Button
      android:id="@+id/btnsair"
      android:layout_width="144dp"
      android:layout_height="67dp"
      android:backgroundTint="#F40B0B"
      android:text="@string/sair"
      android:textColor="#000000"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.952"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.896" />
</androidx.constraintlayout.widget.ConstraintLayout>