<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6E00AA"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnacessar"
        android:layout_width="527dp"
        android:layout_height="486dp"
        android:backgroundTint="#00FF0000"
        android:text="@string/acessar"
        android:textColor="#039BE5"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604"
        app:rippleColor="#000000"
        app:strokeColor="#000000"
        tools:ignore="VisualLintButtonSize,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="261dp"
        android:layout_height="324dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/birdrunnerlogo" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="533dp"
        android:layout_height="153dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pcity"
        android:contentDescription="@string/papo" />

</androidx.constraintlayout.widget.ConstraintLayout>